src/main/java/com/example/areyoup/errors/exception/CustomException.java
package com.example.areyoup.errors.exception;

import com.example.areyoup.errors.errorcode.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode ErrorCode;
}
